# nesnor

./: CMakeLists.txt  Makefile
include/: bus.h  cartridge.h  cpu.h  cpu_ops.h  mem.h  status_flag.h
include/nesnor/: addressing_mode.hpp  bus.hpp  cpu.hpp  instruction.hpp  instruction_identifier.hpp  register.hpp  status_bit.hpp
src/: bus.c  bus.cpp  cartridge.c  cpu.c  cpu.cpp  cpu_ops.c  main.c  main.cpp  mem.c
